--- a/templates/complete.html
+++ b/templates/complete.html
@@ -10,7 +10,7 @@
 <body>
 File uploaded Success {{image_name}}
 <div class="container">
-    <div class="col-lg-12 col-md-6 col-xs-6 thumb">
+    <div class="col-xs-12 thumb">
         <img class="img-responsive" src="{{url_for('send_image', filename=image_name)}}">
     </div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
